# RTSEngine

./: CMakeLists.txt  README.md  UnitTypes.txt  UnitTypes.txt.backup
Resources/Shaders/: Add.frag  Brightness.frag  DownSample.frag  GaussianBlur.frag  discreteHoriz.frag  downSample.frag  fshade.frag  fshadeTexture.frag  instanced.frag  instancedIndexed.vert  storm2.frag  voronoi.frag  vshadeViewTransform.vert
ShadersTmp/: UnitTypesComponents.txt  basicNoise.frag  discreteVert.frag  instanced.vert  instancedTile.vert  instancedUnit.vert  storm.frag  vision.frag
cmake/: CPM.cmake  CompilerFlags.cmake  CompilerWarnings.cmake  ExternalTools.cmake
mess/: Clock.cpp  Clock.hpp  ClockImpl.cpp  ClockImpl.hpp  ClockImplUnix.hpp  CommandManager.h  FileInputStream.cpp  FileInputStream.hpp  InputImpl.hpp  Time.cpp  Time.hpp  UnixInputImpl.cpp  UnixInputImpl.hpp
src/: AttackSystem.cpp  AttackSystem.h  BloomEffect.cpp  BloomEffect.hpp  BoidControler.cpp  BoidControler.h  BoidWorld.cpp  BoidWorld.h  BuildingManager.h  CMakeLists.txt  CommandGroupManager.h  CommandManager.h  Component.h  DebugInfo.cpp  DebugInfo.h  ECS.cpp  ECS.h  Edges.cpp  Edges.h  EdgesFinder1D.cpp  EdgesFinder1D.h  FogOfWar.cpp  FogOfWar.h  Game.cpp  Game.h  Geometry.h  Grid.cpp  Grid.h  HealthSystem.cpp  HealthSystem.h  InteractionComponent.h  InteractionSystem.h  MapGrid.cpp  MapGrid.h  MouseKeyboard.cpp  MouseKeyboard.hpp  NeighbourSearcher.cpp  NeighbourSearcher.h  NeighbourSearcherContext.cpp  NeighbourSearcherContext.h  (+25 more)
src/Graphics/: BloomEffect.cpp  Color.cpp  Color.hpp  ConvexShape.cpp  ConvexShape.hpp  Font.cpp  Font.hpp  Image.cpp  Image.hpp  InputStream.hpp  PostEffect.cpp  PostEffect.hpp  Rect.hpp  RectangleShape.cpp  RectangleShape.hpp  RenderTarget.cpp  RenderTarget.hpp  RenderTexture.cpp  RenderTexture.hpp  RenderWindow.cpp  RenderWindow.hpp  ResourceHolder.hpp  ResourceIdentifiers.hpp  SceneLayer.cpp  SceneLayer.h  Shader.cpp  Shader.h  Shape.cpp  Shape.hpp  Text.cpp  Text.hpp  Texture.cpp  Texture.hpp  Utils.cpp  Utils.hpp  Vertex.cpp  Vertex.hpp  VertexArray.cpp  VertexArray.hpp
src/PathFinding/: PathFinder2.cpp  PathFinder2.h  ReducedTriangulationGraph.cpp  ReducedTriangulationGraph.h  Triangulation.cpp  Triangulation.h
src/Systems/: AttackSystem.cpp  AttackSystem.h  Components.h  GraphicsSystem.cpp  GraphicsSystem.h  HealthSystem.cpp  HealthSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  ProjectileSystem.cpp  ProjectileSystem.h  SeekSystem.cpp  SeekSystem.h  TransformSystem.cpp  TransformSystem.h  VisionSystem.cpp  VisionSystem.h
src/Tests/: main.cpp  test_gay_vector.cc  test_neighbour_search.cc  test_reduced_graph.cc  test_triangulation.cc
src/Utils/: DebugInfo.cpp  DebugInfo.h  GayVector.cpp  GayVector.h  Grid.cpp  Grid.h  NeighbourSearcherContext.h  NeighbourSearcherStrategy.cpp  NeighbourSearcherStrategy.h  RandomTools.h  Vector.hpp  Vector.inl
src/include/glad/: glad.h
